--- a/assets/css/banner/banner.css
+++ b/assets/css/banner/banner.css
@@ -2,9 +2,10 @@
     background-image: 
         linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(49,168,221,0.2) 50%, rgba(0,0,0,1) 100%),
         url(../../img/banner.png);
+    background-repeat: no-repeat;
     border-bottom: 1px solid #33A8DB;
-    height: 90vh;
-    width: 100vw;
+    height: 98%;
+    width: 100%;
 }
 
 .banner__container {
@@ -14,7 +15,8 @@
     justify-content: center;
     margin: auto;
     text-align: center;
-    width: 40vw;
+    width: 40%;
+    
 }
 
 .banner__logo {
@@ -45,7 +47,7 @@
     border:  1px solid #31A8DD;
     font-weight: 900;
     letter-spacing: 0.21em;
-    margin: .5rem;
+    margin: .5rem .5rem 6rem .5rem;
     padding: 1rem 1.8rem;
 }
 
