--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2,4 +2,5 @@ body {
     background-color: #000000;
     font-family: 'Raleway', sans-serif;
     font-size: 1rem;
+    box-sizing: border-box;
 }
