Criando e estilizando o rodapé

--- a/assets/css/content/challenges.css
+++ b/assets/css/content/challenges.css
@@ -18,5 +18,5 @@
 .challenges_text {
     color: #ffffff;
     line-height: 1.174rem;
-    margin: 2rem 20rem;
+    margin: 2rem 20rem 5rem 20rem;
 }
