Melhorando a responsividade dos elementos

--- a/assets/css/content/challenges.css
+++ b/assets/css/content/challenges.css
@@ -8,15 +8,15 @@
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 0.19em;
-    margin: 7rem 10rem 2rem 10rem;
+    margin: 8% 20% 3% 20%;
 }
 
 .challenges_image {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.8%;
 }
 
 .challenges_text {
     color: #ffffff;
     line-height: 1.174rem;
-    margin: 2rem 20rem 5rem 20rem;
+    margin: 2% 22% 7% 22%;
 }
