--- a/assets/css/banner/banner.css
+++ b/assets/css/banner/banner.css
@@ -3,6 +3,7 @@
         linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(49,168,221,0.2) 50%, rgba(0,0,0,1) 100%),
         url(../../img/banner.png);
     background-repeat: no-repeat;
+    background-size: cover;
     border-bottom: 1px solid #33A8DB;
     height: 98%;
     width: 100%;
@@ -10,9 +11,6 @@
 
 .banner__container {
     align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     margin: auto;
     text-align: center;
     width: 40%;
@@ -20,7 +18,7 @@
 }
 
 .banner__logo {
-    margin: 4rem 2rem 2rem 2rem;
+    margin: 10% 5% 5% 5%;
     width: 14rem;
 }
 
@@ -32,14 +30,14 @@
     color: #ffffff;
     font-size: 2.5rem;
     font-weight: 900;
-    margin-bottom: 1.2rem;   
+    margin-bottom: 5%;   
 }
 
 .banner__text {
     color: #ffffff;
     font-size: 1.25rem;
     line-height: 1.468rem;
-    margin-bottom: 1.2rem;
+    margin-bottom: 5%;
 }
 
 .banner__button {
@@ -47,7 +45,7 @@
     border:  1px solid #31A8DD;
     font-weight: 900;
     letter-spacing: 0.21em;
-    margin: .5rem .5rem 6rem .5rem;
+    margin: 3% 10% 15% 10%;
     padding: 1rem 1.8rem;
 }
 
